fix: fix logo text align

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -147,7 +147,7 @@ button:hover,
 	justify-content: space-between;
 }
 
-.logo {
+.logo a {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
