--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -1,7 +1,8 @@
 @import url(../main/style.css);
 
 .header {
-	position: static;
+	position: fixed;
+	top: 0;
 	height: 120px;
 	padding: 30px 0;
 }
@@ -25,6 +26,7 @@
 /* our friends section */
 
 .our-friends {
+	margin-top: 120px;
 	padding: 80px 0 100px;
 	color: var(--color-light-l);
 }
